fix alignment for issue priority

--- a/src/app/main/kanban/item-box/item-box.component.css
+++ b/src/app/main/kanban/item-box/item-box.component.css
@@ -22,4 +22,10 @@
   background-color: #EBECF0;
 }
 
+.aligned-with-icon{
+  position: absolute;
+  margin-top: 5px;
+  margin-left: 5px; /* optional */
+}
+
 
